--- a/Website/main.html
+++ b/Website/main.html
@@ -28,7 +28,7 @@
               </li>
             </ul>
             <span class="navbar-text">
-              Sobre
+              Abouts
             </span>
           </div>
         </div>
